# amarcord-run-bridge

./: .gitignore  .gitlab-ci.yml  README.md  flake.nix  openapi-generator-config.yaml  openapi.json  pyproject.toml  requirements-dev.txt  requirements.txt
amarcord-open/: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  setup.py  tox.ini
amarcord-open/.github/workflows/: python.yml
amarcord-open/.openapi-generator/: FILES
amarcord-open/amarcord_open/: __init__.py  api_client.py  configuration.py  rest.py
amarcord-open/amarcord_open/api/: __init__.py  analysis_api.py  attributi_api.py  beamtimes_api.py  chemicals_api.py  config_api.py  datasets_api.py  default_api.py  events_api.py  experimenttypes_api.py  files_api.py  merging_api.py  processing_api.py  runs_api.py  schedule_api.py
amarcord-open/amarcord_open/models/: __init__.py  attributo_type.py  chemical_type.py  db_job_status.py  http_validation_error.py  json_analysis_run.py  json_attributi_id_and_role.py  json_attributo.py  json_attributo_bulk_value.py  json_attributo_value.py  json_beamtime.py  json_beamtime_output.py  json_beamtime_schedule.py  json_beamtime_schedule_output.py  json_beamtime_schedule_row.py  json_change_run_experiment_type_output.py  json_check_standard_unit_input.py  json_check_standard_unit_output.py  json_chemical.py  json_chemical_id_and_name.py  json_chemical_with_id.py  json_chemical_without_id.py  json_copy_chemical_output.py  json_create_attributi_from_schema_input.py  json_create_attributi_from_schema_single_attributo.py  json_create_attributo_input.py  json_create_attributo_output.py  json_create_data_set_input.py  json_create_file_output.py  (+85 more)
amarcord-open/docs/: AnalysisApi.md  AssociatedTable.md  AttributiApi.md  AttributoType.md  BeamtimesApi.md  ChemicalType.md  ChemicalsApi.md  ConfigApi.md  DBJobStatus.md  DatasetsApi.md  DefaultApi.md  EventsApi.md  ExperimenttypesApi.md  FilesApi.md  JSONSchemaArray.md  JSONSchemaArraySubtype.md  JSONSchemaBoolean.md  JSONSchemaInteger.md  JSONSchemaNumber.md  JSONSchemaString.md  JsonAnalysisRun.md  JsonAttributiIdAndRole.md  JsonAttributo.md  JsonAttributoBulkValue.md  JsonAttributoValue.md  JsonAttributoWithName.md  JsonBeamtime.md  JsonBeamtimeOutput.md  JsonBeamtimeSchedule.md  JsonBeamtimeScheduleOutput.md  JsonBeamtimeScheduleRow.md  JsonChangeRunExperimentType.md  JsonChangeRunExperimentTypeOutput.md  JsonCheckStandardUnitInput.md  JsonCheckStandardUnitOutput.md  JsonChemical.md  JsonChemicalIdAndName.md  JsonChemicalWithId.md  JsonChemicalWithoutId.md  JsonCopyChemicalInput.md  (+129 more)
amarcord-open/openapi_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
amarcord-open/test/: test_analysis_api.py  test_associated_table.py  test_attributi_api.py  test_attributo_type.py  test_beamtimes_api.py  test_chemical_type.py  test_chemicals_api.py  test_config_api.py  test_datasets_api.py  test_db_job_status.py  test_default_api.py  test_events_api.py  test_experimenttypes_api.py  test_files_api.py  test_http_validation_error.py  test_json_analysis_run.py  test_json_attributi_id_and_role.py  test_json_attributo.py  test_json_attributo_bulk_value.py  test_json_attributo_value.py  test_json_attributo_with_name.py  test_json_beamtime.py  test_json_beamtime_output.py  test_json_beamtime_schedule.py  test_json_beamtime_schedule_output.py  test_json_beamtime_schedule_row.py  test_json_change_run_experiment_type.py  test_json_change_run_experiment_type_output.py  test_json_check_standard_unit_input.py  test_json_check_standard_unit_output.py  test_json_chemical.py  test_json_chemical_id_and_name.py  test_json_chemical_with_id.py  test_json_chemical_without_id.py  test_json_copy_chemical_input.py  test_json_copy_chemical_output.py  test_json_copy_experiment_types_input.py  test_json_copy_experiment_types_output.py  test_json_create_attributi_from_schema_input.py  test_json_create_attributi_from_schema_output.py  (+133 more)
ci/: check-requirements.sh
run_bridge/: __init__.py  amarcord_connector.py  bootstrap.py  daemon.py  logging_util.py  main_loop.py  p11_daemon.py  server.py  webserver.py
scripts/: generate-amarcord-open.sh  regenerate-requirements.sh
(+126 files in other folders)
